--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,14 @@
 
 # Ignore .DS_store file
 .DS_Store
+
+### Emacs ###
+# -*- mode: gitignore; -*-
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
